--- a/app/views/public_images/_admin_public_image.html.haml
+++ b/app/views/public_images/_admin_public_image.html.haml
@@ -1,14 +1,14 @@
 - skip_order ||= false
-%li.mt-1
+%li.mt-1.col-sm-6
   .card.bg-light.admin-public-image
     .card-body.pt-1.pb-0
       .row
-        .col-sm-2
+        .col-3
           .img-box
             = image_tag(public_image.image_url(:small)) if public_image.image?
           %p
             = public_image.name.truncate(18)
-        .col-sm-2
+        .col-9
           - if public_image.imageable_type != 'Blog'
             %textarea.form-control
               \&lt;img class="post-image" src="#{public_image.image_url}" alt="ENTER YOUR TEXT HERE"&gt;
@@ -19,7 +19,7 @@
       .row.mt-2
         .col-6
           - if public_image.imageable_type == 'Blog'
-            = link_to "Delete", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete
+            = link_to "Delete", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, data: { confirm: "Are you sure?" }
         .col-6.text-right
           - unless skip_order
             %label.index-image-select.form-check-inline
