--- a/app/javascript/stylesheets/admin/_general.scss
+++ b/app/javascript/stylesheets/admin/_general.scss
@@ -124,18 +124,20 @@
 
 .admin-public-image {
   font-size: 12px;
+  .card-body {
+    padding-top: 0.5rem;
+    padding-bottom: 0;
+  }
   img {
     display: block;
     max-width: 100%;
-    // width: 85px;
     height: auto;
     margin: 0 auto;
   }
-  @include media-breakpoint-down(sm) {
-    max-height: 100%;
-    .img-box {
-      text-align: center;
-    }
+  .image-filename {
+    @extend .small;
+    @extend .less-strong;
+    @extend .text-center;
   }
 }
 
