--- a/app/views/public_images/_admin_public_image.html.haml
+++ b/app/views/public_images/_admin_public_image.html.haml
@@ -1,12 +1,13 @@
 - skip_order ||= false
-%li.mt-1.col-sm-6
-  .card.bg-light.admin-public-image
-    .card-body.pt-1.pb-0
+-# all this is also in image_uploader.js
+%li.admin-public-image.collapse.show.mt-1.col-xl-4.col-sm-6{ id: "image-#{public_image.id}", "data-imageid" => public_image.id }
+  .card.bg-light
+    .card-body
       .row
         .col-3
           .img-box
             = image_tag(public_image.image_url(:small)) if public_image.image?
-          %p
+          %p.image-filename
             = public_image.name.truncate(18)
         .col-9
           - if public_image.imageable_type != 'Blog'
@@ -15,14 +16,12 @@
           - else
             %textarea.form-control
               \&lt;img class="post-image" src="#{public_image.image_url}" alt="ENTER YOUR TEXT HERE"&gt;
-      %hr
-      .row.mt-2
+      .row
         .col-6
           - if public_image.imageable_type == 'Blog'
-            = link_to "Delete", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, data: { confirm: "Are you sure?" }
+            = link_to "delete", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, data: { confirm: "Are you sure? You could lose any unsaved changes!" }, class: "image-delete-button"
         .col-6.text-right
           - unless skip_order
             %label.index-image-select.form-check-inline
               %input{ class: "index_image_#{public_image.id}", name: "index_image_id", type: "radio", value: "#{public_image.id}" }
               %em.ml-1 primary image
-
