--- a/app/javascript/stylesheets/_customer_virtual_line.scss
+++ b/app/javascript/stylesheets/_customer_virtual_line.scss
@@ -1,7 +1,3 @@
-.customer-virtual-line-wrapper {
-  background: $white;
-}
-
 // The footer, powered by Bike Index copies the primary nav header styles
 $vertical-height: 12px;
 $primary-logo-fullsize-height: 84px;
@@ -10,6 +6,30 @@ $primary-logo-padding-mobile: $vertical-height;
 $mainmenu-transform-speed: 200ms;
 $mainmenu-width: 80%;
 $mainmenu-open-zindex: 10;
+
+#customer-virtual-line-wrapper {
+  background: $white;
+  min-height: 300px;
+  padding: 24px 0 12px;
+}
+
+.virtual-line-header {
+  text-align: center;
+  margin-bottom: 3rem;
+  img {
+    max-width: 250px;
+    width: 100%;
+    height: auto;
+    display: inline-block;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    img {
+      max-width: 100px;
+    }
+  }
+}
 
 .customer-virtual-line-body {
   background: $primary-nav-background;
@@ -23,7 +43,6 @@ $mainmenu-open-zindex: 10;
 
   h2 {
     float: left;
-    font-family: "Open Sans";
     font-style: italic;
     font-size: 24px;
     margin: 10px 12px 0 0;
@@ -49,7 +68,6 @@ $mainmenu-open-zindex: 10;
     color: #d8d8d8;
     line-height: 1.15;
     font-size: 12px;
-    font-family: "Open Sans";
     font-style: italic;
     text-decoration: none;
     margin: 11px $vertical-height 0 $vertical-height;
