--- a/app/views/layouts/customer_virtual_line.html.haml
+++ b/app/views/layouts/customer_virtual_line.html.haml
@@ -4,14 +4,19 @@
   %head
     = header_tags
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     = javascript_pack_tag "application_standalone"
     = stylesheet_pack_tag "application_css"
-  %body{ id: page_id, class: "#{body_class} customer-virtual-line-body" }
-    .customer-virtual-line-wrapper
+  %body{ id: page_id, class: "customer-virtual-line-body" }
+    #customer-virtual-line-wrapper
       = render "layouts/revised_messages"
-
-      .container.mt-4.pb-4
+      - if current_organization.present?
+        %h1.virtual-line-header
+          - if current_organization.avatar.present?
+            = image_tag current_organization.avatar_url, alt: "#{current_organization.name} logo"
+          %em
+            = current_organization.name
+          virtual line
+      .container.pb-4
         = yield
 
     %footer.footer-powered-by-bike-index
