--- a/app/views/org_public/customer_lines/show.html.haml
+++ b/app/views/org_public/customer_lines/show.html.haml
@@ -1,5 +1,21 @@
 - if @appointment.id.present?
-  EDIT FORM
+  = form_for @appointment, { as: :appointment, url: update_organization_customer_appointment_path(@appointment.id, organization_id: current_organization.to_param, location_id: current_location&.id), action: "update", method: "PUT" } do |f|
+    = f.hidden_field :location_id, value: current_location&.id
+    .row
+      .form-group.col-sm-6
+        = f.label :name, "Your name"
+        = f.text_field :name, required: true, class: "form-control"
+      .form-group.col-sm-6
+        = f.label :email, "Your email"
+        = f.email_field :email, required: true, class: "form-control"
+    .row
+      .form-group.col-sm-6
+        = f.label :reason, "Main reason for visit"
+        = f.select :kind, @appointment.permitted_reasons, {}, class: "form-control"
+      .form-group.col-sm-6.text-center
+        %label.d-block &nbsp;
+        = f.submit "Get in line!", class: "btn btn-success"
+
 - else
   = form_for @appointment, { as: :appointment, url: organization_customer_appointments_path(organization_id: current_organization.to_param, location_id: current_location&.id), action: "create", method: "POST" } do |f|
     = f.hidden_field :location_id, value: current_location&.id
