--- a/app/views/shared/_donation_modal.html.haml
+++ b/app/views/shared/_donation_modal.html.haml
@@ -7,11 +7,11 @@
             &times;
         = image_tag "revised/logo_blue_black.svg", class: "modal-title-logo", alt: "Bike Index home"
         %h2.modal-title
-          = t(".header")
+          = t(".header_june_2020")
         %hr
         %p.mt-2
           %strong.em
-            = t(".subheader")
+            = t(".subheader_june_2020_html")
         %form#bikeindex-stripe-initial-form
           %ul.row.amount-list
             - numbers = [10, 25, 50, 100, 200, 300, 500]
