--- a/app/views/organized/hot_sheets/edit.html.haml
+++ b/app/views/organized/hot_sheets/edit.html.haml
@@ -1,7 +1,7 @@
 -# TODO: translations
 .organized-page-header
   %h1
-    Hot Sheet Configuration
+    Stolen Bike Hot Sheet Configuration
 
 .row
   .col-md-6
