don't send if no email addresses

--- a/app/views/organized/hot_sheets/edit.html.haml
+++ b/app/views/organized/hot_sheets/edit.html.haml
@@ -1,7 +1,9 @@
 -# TODO: translations
 .organized-page-header
   %h1
-    Stolen Bike Hot Sheet Configuration
+    %em
+      Stolen Bike Hot Sheet
+    Configuration
 
 .row
   .col-md-6
