--- a/app/assets/stylesheets/revised/pages/organized/_hot_sheet.scss
+++ b/app/assets/stylesheets/revised/pages/organized/_hot_sheet.scss
@@ -103,14 +103,16 @@
 }
 
 // Basically like alert, but the text isn't colored by default
-.hot-sheet-notification-panel {
+.hot-sheet-notification-panel,
+.hot-sheet-notification-panel-warning {
   @extend .alert;
-  border: 1px solid #3498db;
   margin-top: 30px;
+  h3,
   h4 {
-    color: #3498db;
-    font-size: 16px;
     margin: 0 0 1rem;
+  }
+  h4 {
+    font-size: 16px;
   }
   form {
     label {
@@ -121,5 +123,19 @@
       margin-left: 1rem;
       font-size: 14px;
     }
+  }
+}
+.hot-sheet-notification-panel {
+  border: 1px solid $brand-info;
+  h3,
+  h4 {
+    color: $brand-info;
+  }
+}
+.hot-sheet-notification-panel-warning {
+  border: 1px solid $brand-warning;
+  h3,
+  h4 {
+    color: $brand-warning;
   }
 }
